# pygments-bsl

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  mkdocs.yml  pygments-bsl.py  pyproject.toml  setup.py  zensical.toml
.github/: copilot-instructions.md
.github/workflows/: gh-pages.yml  publish.yml  test.yml
docs/: 453.md  641.md  big.md  index.md  lang.md  mkdocs_hooks.py  tokens.md
docs/javascripts/: code-theme-switcher.js
docs/stylesheets/: 1c.css  code-theme-switcher.css  extra.css  monokai.css  vscode.css
overrides/partials/: code-theme-switcher.html  header.html
pygments_bsl/: __init__.py  generated_data.py  lexer.py
tests/: samples.bsl  samples.sdbl  test_lexer.py  tokens_bsl.py  tokens_os.py
tests/examplefiles/bsl/: samples.bsl  samples.os
tests/examplefiles/sdbl/: samples.sdbl
tools/: check_dist.py  generate_data.py
