[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygments-bsl"
version = "1.1.0"
description = "Pygments 1C (BSL, SDBL) lexer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Igor Apresov", email = "zeegin@zeegin.com" },
]
dependencies = [
    "pygments>=2.3",
]
classifiers = [
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/zeegin/pygments-bsl"
Documentation = "https://zeegin.github.io/pygments-bsl/"
Repository = "https://github.com/zeegin/pygments-bsl"

[project.entry-points."pygments.lexers"]
bsl = "pygments_bsl:BslLexer"
sdbl = "pygments_bsl:SdblLexer"

[tool.setuptools]
packages = ["pygments_bsl"]
